kubia/kubia-svc-loadbalancer.yml
apiVersion: v1
kind: Service
metadata:
  name: kubia-loadbalancer
spec:
  type: LoadBalancer
  externalIPs:
  - 192.168.1.31
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: kubia
